--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "name": "commathproject",
   "version": "0.1.0",
-  "homepage": "https://github.com/Anuwatchaturon/commathproject",
+  "homepage": "https://Anuwatchaturon.github.io/commathproject/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "formik": "^2.1.5",
     "gh-pages": "^3.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.1"
   },
   "scripts": {
     "predeploy": "npm run build",
